# nutricompare-llm-chatbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  professor_app.py  professor_app.py.bak  pyproject.toml  requirements.txt
.venv-1/: pyvenv.cfg
eval/: run_auto_eval_cli.py
eval/datasets/: nutricompare_50_tests.json
logs/judge_reports/: judge_report_20260601_154445.json  judge_report_20260601_154445.md  judge_reports.csv
scripts/: live_backend_flow.py  show_judge_leaderboard.py  test_calorie_extractor.py  test_food_parser.py  test_judge_confidence.py  test_judge_report_exporter.py  test_meal_tracking.py
src/application/services/: confidence_scorer.py  food_parser.py  meal_memory_service.py  meal_tracking_service.py
src/domain/entities/: meal_entry.py  parsed_food.py
src/nutricompare/application/analytics/: judge_leaderboard.py
src/nutricompare/application/dto/: chat_request.py  chat_response.py  evaluation_request.py  evaluation_response.py  guard_result.py
src/nutricompare/application/interfaces/: llm_client.py
src/nutricompare/application/reports/: judge_report_exporter.py
src/nutricompare/application/services/: calorie_extractor.py  chat_service.py  chat_service.py.bak_trace  confidence_scorer.py  csv_logger.py  evaluation_service.py  food_parser.py  input_guard_service.py  judge_confidence_service.py  meal_command_handler.py  meal_memory_service.py  meal_tracking_service.py  question_history_service.py
src/nutricompare/prompts/: evaluation_prompts.py  system_prompts.py
storage/: interactions.csv
(+20 files in other folders)
